cargo-features = ["profile-rustflags"]

[workspace]
members = ["ql_rcon", "ql_stats"]

[workspace.package]
rust-version = "1.85"
edition = "2024"
authors = ["Markus 'ShiN0' Gaertner"]

[workspace.dependencies]
arzmq = { version = ">=0.5.6", default-features = false, features = ["futures", "builder", "draft-api"] }
regex = { version = ">=1.11", default-features = false, features = ["perf", "unicode"] }
serde_json = { version = ">=1.0.145", default-features = false, features = ["alloc"] }

[package]
name = "shinqlx"
version = "0.6.4-alpha.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "ShiN0's QuakeLive extension in Rust"
repository = "https://github.com/mgaertne/shinqlx"
license-file = "LICENSE"
include = ["run_server_shinqlx.sh", "log4rs.yml"]
publish = false

[lib]
name = "shinqlx"
path = "src/lib.rs"
test = true
bench = true
doc = true
doctest = false
proc-macro = false
harness = true
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "shinqlx_benchmark"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.release.build-override]
rustflags = ["-Zlocation-detail=none"]

[dependencies]
serde_json = { workspace = true }
regex = { workspace = true }
arzmq = { workspace = true }

ctor = { version = ">=0.6", default-features = false, features = ["proc_macro"] }
rand = { version = ">=0.9", default-features = false, features = ["thread_rng"] }
pyo3 = { version = ">=0.26, <0.27", features = ["pyo3-macros", "extension-module", "nightly", "parking_lot"] }
retour = { version = ">=0.4.0-alpha.4", default-features = false, features = ["nightly"] }
derive_builder = { version = ">=0.20", default-features = false, features = ["clippy", "alloc"] }
arc-swap = { version = ">=1.7", default-features = false }
tap = { version = ">=1.0.1", default-features = false }
rayon = { version = ">=1.11", default-features = false }
derive_more = { version = ">=2.0", default-features = false, features = ["display", "try_from"]}
derive-new = { version = ">=0.7", default-features = false }
log = { version = ">=0.4", default-features = false }
log4rs = { version = ">=1.4.0", default-features = false, features = ["console_appender", "config_parsing", ] }
signal-hook = { version = ">=0.3", default-features = false }
signal-hook-registry = { version = ">=1.4", default-features = false }
chrono = { version = ">=0.4", default-features = false }
itertools = { version = ">=0.14", default-features = false, features = ["use_std"] }
arrayvec = { version = ">=0.7", default-features = false }
cfg-if = { version = ">=1.0", default-features = false }
parking_lot = { version = ">=0.12", default-features = false, features = ["nightly"] }
git2 = { version = ">=0.20", default-features = false }
semver = { version = ">=1.0", default-features = false }
unicode-segmentation = { version = ">=1.12", default-features = false, features = ["no_std"] }

region = { version = ">=3.0", default-features = false, optional = true }

[target."cfg(target_os = \"linux\")".dependencies]
procfs = { version = ">=0.18", default-features = false }
procfs-core = { version = ">=0.18", default-features = false }

[target."cfg(not(windows))".dependencies]
tikv-jemallocator = { version = ">=0.6", default-features = false, features = ["background_threads_runtime_support"], optional = true }

[target."cfg(windows)".dependencies]
mimalloc = { version = ">=0.1.48", default-features = false, optional = true }

[build-dependencies]
pyo3-build-config = { version = ">=0.26, <0.27", default-features = false, features = ["resolve-config"] }
git2 = { version = ">=0.20", default-features = false }

[dev-dependencies]
pretty_assertions = { version = ">=1.4", default-features = false, features = ["alloc"] }
rstest = { version = ">=0.26", default-features = false }
mockall = { version = ">=0.13", default-features = false, features = ["nightly"] }
serial_test = { version = ">=3.2", default-features = false }
tempfile = { version = ">=3.23", default-features = false }

# for benchmark tests
criterion = { version = ">=0.7", default-features = false, features = ["cargo_bench_support", "rayon"] }
criterion-macro = { version = ">=0.4", default-features = false }

[features]
default = ["alloc"]
patches = ["dep:region"]
alloc = ["dep:tikv-jemallocator", "dep:mimalloc"]

[lints.rust]
missing_docs = "warn"
non_local_definitions = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly,tarpaulin_include)'] }

[lints.rustdoc]
broken_intra_doc_links = "deny"
