[build-system]
requires = ["maturin>=1.0,<2.0", "tox>=4.21"]
build-backend = "maturin"

[project]
dynamic = ["version"]
name = "shinqlx"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["setuptools>=61.2", "redis>=5.0", "hiredis>=3.0", "pyzmq>=23"]

[project.optional-dependencies]
ruff = [ "ruff>=0.2" ]
mypy = [ "mypy>=0.990", "types-redis>=4.3" ]
docs = [ "sphinx>=7" ]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/mgaertne/shinqlx"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = false

[tool.maturin]
unstable-flags = ["build-std=std,core,alloc,panic_abort", "build-std-features=panic-unwind,panic_immediate_abort"]
frozen = false
locked = false

include = [
    { path = "src/**/*", format = "sdist" },
    { path = "build.rs", format = "sdist" },
    { path = ".cargo/**/*", format = "sdist" },
    { path = "run_server_shinqlx.sh", format = "sdist" },
    { path = "shinqlx_log.yml", format = "sdist" },
]
bindings = "pyo3"
compatibility = "linux"
auditwheel = "skip"
python-source = "python"
python-packages = ["shinqlx", "minqlx"]

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["C40", "E", "F", "SIM", "TCH"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []
per-file-ignores = { }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
mccabe.max-complexity = 10

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/python"
packages = ["minqlx", "shinqlx"]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_reexport = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.tox]
env_list = ["ruff", "mypy", "docs"]

[tool.tox.env_run_base]
use_develop = true

[tool.tox.env.ruff]
extras = [ "ruff" ]
commands = [[ "ruff", "check", { replace = "posargs", default = [], extend = true }]]

[tool.tox.env.mypy]
extras = [ "mypy" ]
commands = [[ "mypy", { replace = "posargs", default = [], extend = true } ]]

[tool.tox.env.docs]
extras = [ "docs" ]
commands = [["sphinx-build", "-d", "{envtmpdir}{/}doctree", "docs", "_docs_out", "--color", "-b", "html"]]
